# oEmbedPy

./: .bumpversion.cfg  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: main.yml
doc/: Makefile  conf.py  index.rst
doc/api/: .gitignore  oembedpy.discovery.rst  oembedpy.providers.rst  oembedpy.rst
docs/: getting-started.rst  index.rst
src/oembedpy/: __init__.py  cli.py  discovery.py  providers.py
tests/: test_discovery.py  test_it.py  test_providers.py
