[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oEmbedPy"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "BeautifulSoup4",
    "httpx",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
# For extras
cli = [
  "click",
]
# For developments
test = [
    "pytest >=7.2.0,<8",
    "pytest-httpserver >=1.0.6,<2",
]
docs = [
    "furo ==2022.9.29",
    "Sphinx >=5.3.0,<6",
]

[project.urls]
Home = "https://attakei.github.io/oEmbedPy"

[tool.flit.module]
name = "oembedpy"
